@@ -1860,5 +1860,10 @@ void addBaseObjectToLiveObjectSet( int ) {
     }
 
 
+// implement a NULL versions of these functions to make soundBank happy
+void addMusicSuppression( const char *inActionName ) {
+    }
 
+void removeMusicSuppression( const char *inActionName ) {
+    }
 
