@@ -29,6 +29,8 @@
 
 #include "authorship.h"
 
+#include "musicPlayer.h"
+
 
 
 
@@ -653,6 +655,8 @@ float initSoundBankStep() {
             r->id = 0;
             r->hash = 0;
             r->sha1Hash = NULL;
+            r->lengthInSeconds = 0;
+            
             
             sscanf( fileName, "%d.", &( r->id ) );
             
@@ -715,6 +719,8 @@ float initSoundBankStep() {
                         delete [] samplesR;
                         }
                     
+                    r->lengthInSeconds = numSamples / (double)getSampleRate();
+
                     if( doComputeSoundHashes ) {
                         recomputeSoundHash( r, soundDataLength, soundData );
                         }
@@ -988,8 +994,26 @@ char *getSoundBankLoadFailure() {
     }
 
 
+static char musicSupressedByLongSound = false;
+
+static double musicSupressionStopTime = 0;
+
+
 
 void stepSoundBank() {
+    
+    if( musicSupressedByLongSound ) {
+        // check if suppression is over
+        
+        if( game_getCurrentTime() > musicSupressionStopTime ) {
+            
+            musicSupressedByLongSound = false;
+            
+            removeMusicSuppression( "soundBankLongSound" );
+            }
+        }
+
+
     // no more dynamic loading or unloading
     // they are all loaded at startup
     return;
@@ -1038,7 +1062,9 @@ void stepSoundBank() {
                 if( samples != NULL ) {
                     
                     r->sound = setSoundSprite( samples, numSamples );
-                            
+                    
+                    r->lengthInSeconds = numSamples / (double)getSampleRate();
+
                     delete [] samples;
                     }
                 
@@ -1126,6 +1152,25 @@ void playSound( int inID, double inVolumeTweak, double inStereoPosition,
                 }
 
             idMap[inID]->numStepsUnused = 0;
+            
+            if( idMap[inID]->lengthInSeconds > 5 ) {
+                
+                if( musicSupressedByLongSound ) {
+                    // we already have a long sound playing
+                    // don't add another one
+                    return;
+                    }
+                
+                musicSupressedByLongSound = true;
+                addMusicSuppression( "soundBankLongSound" );
+
+                musicSupressionStopTime = 
+                    game_getCurrentTime() + idMap[inID]->lengthInSeconds;
+                }
+            
+
+            
+
             
             if( reverbDisabled || idMap[inID]->reverbSound == NULL ) {
                 // play just sound, ignore mix param    
@@ -1758,6 +1803,9 @@ int stopRecordingSound() {
     r->id = newID;
     r->sound = setSoundSprite( &( samples[ finalStartPoint ] ),
                                finalNumSamples );
+    
+    r->lengthInSeconds = finalNumSamples / (double)getSampleRate();
+    
     r->reverbSound = NULL;
 
     r->hash = 0;
@@ -2023,6 +2071,9 @@ int addSoundToBank( int inNumSoundFileBytes,
     
     r->id = newID;
     r->sound = setSoundSprite( samples, numSamples );
+
+    r->lengthInSeconds = numSamples / (double)getSampleRate();
+    
     r->reverbSound = NULL;
 
     if( reverbConvolution.savedNumWindowsB != -1 ) {
